[PLG_TOOLS_NOVNC][COM_TOOLS] Slight adjustment to fix keyboard focus on tablets

--- a/components/com_tools/assets/css/tools.css
+++ b/components/com_tools/assets/css/tools.css
@@ -107,6 +107,7 @@
 		        box-shadow: 0 0 2px rgba(0, 0, 0, 0.4), 0 1px 4px rgba(0, 0, 0, .1);
 	}
 	#app-content {
+		outline: 0;
 		position: relative;
 		/* [!] HACKS - IE 7 */
 		*z-index: 2;
